# vehicle_evolution

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  prepare_environment.sh  ubuntu_prepare_environment.sh
cmake/: CompilerFlags.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  ProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
docs/: Doxyfile.in
scripts/: run_in_docker.sh  ubuntu_build_debug.sh  ubuntu_build_release.sh  ubuntu_prepare_environment.sh
src/: CMakeLists.txt  car.cpp  car.h  config.h  draw.cpp  draw.h  evolution_algorithm.cpp  evolution_algorithm.h  hello.cpp  hello.h  main.cpp  utils.h  window.cpp  window.h  window_size.h  world.cpp  world.h
test/: CMakeLists.txt  test.cpp
